--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Michael Curry <thatmichaelcurry@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+pydantic = "^1.7.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
